# stratum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/core/: CMakeLists.txt  compositor.cpp  compositor.hpp  depth_map.hpp  engine.cpp  engine.hpp
